Canviada notació de la norma d'un nombre complex

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -149,6 +149,7 @@
 \newcommand{\divides}{\mathrel{|}}
 \newcommand{\ndivides}{\mathrel{\nmid}}
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
+\newcommand{\norma}[1]{\left\lvert#1\right\rvert}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\lxor}{\veebar}
 \newcommand{\convergeixuniformement}{\rightrightarrows}
