--- a/parts/Complexa.tex
+++ b/parts/Complexa.tex
@@ -266,7 +266,7 @@
 	\begin{definition}[Norma d'un nombre complex]
 		\labelname{norma d'un nombre complex}\label{def:norma d'un nombre complex}
 		Sigui \(z=a+b\iu\) un nombre complex. Aleshores definim la seva norma com
-		\[\norm{z}=\sqrt{a^{2}+b^{2}}.\]
+		\[\norma{z}=\sqrt{a^{2}+b^{2}}.\]
 	\end{definition}
 	\begin{proposition}[Desigualtat triangular]
 		\href{http://chistemat.es/wp-content/uploads/2013/11/contra-la-desigualdad.png}{Prova visual}.
@@ -274,7 +274,7 @@
 	\begin{proposition}
 		\label{prop:la nomra d'un nombre complex és l'arrel del nombre pel seu conjugat}
 		Sigui \(z\) un nombre complex. Aleshores es satisfà
-		\[\norm{z}=\sqrt{z\conjugat{z}}.\]
+		\[\norma{z}=\sqrt{z\conjugat{z}}.\]
 		\begin{proof}
 			%TODO
 		\end{proof}
