--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -16,6 +16,10 @@
 	%	\end{enumerate}
 \section{Àlgebra lineal}
 	\subsection{Definicions}
+	\begin{definition}[Forma bilineal]
+		\labelname{forma bilineal}\label{def:forma bilineal}
+		Doble la linealitat, doble el poder.
+	\end{definition}
 	\begin{definition}[Forma bilineal definida estrictament positiva o negativa]
 		\labelname{forma bilineal definida estrictament positiva o negativa}\label{def:bilineal definida estrictament positiva/negativa}
 		Sigui \(M\) una forma bilineal simètrica. Preguntar a en Cedò.
