Afegida teoria a geometria diferencial fins a la part de la longitud d'una corba en una superfície.

--- a/parts/Complexa.tex
+++ b/parts/Complexa.tex
@@ -36,11 +36,11 @@
 	\begin{proposition}
 		\label{prop:els nombres complexos són associatius per la suma}
 		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos. Aleshores
-		\[(a+b\iu)+\big((c+d\iu)+(u+v\iu))\big)=\big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).\]
+		\[(a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)=\big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).\]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
 			\begin{align*}
-				(a+b\iu)+\big((c+d\iu)+(u+v\iu))\big)&=(a+b\iu)+\big((c+u)+(d+v)\iu\big) \\
+				(a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)&=(a+b\iu)+\big((c+u)+(d+v)\iu\big) \\
 				&=\big(a+(c+u)\big)+\big(b+(d+v)\big)\iu \\
 				&=\big((a+c)+u\big)+\big((b+d)+v\big)\iu \\
 				&=\big((a+c)+(b+d)\iu\big)+(u+v\iu) \\
