--- a/parts/EDOS2.tex
+++ b/parts/EDOS2.tex
@@ -162,4 +162,32 @@
 	% 5 Lições de Equações Diferenciais Ordinárias
 %	\subsection{Cicles límit}
 	
+\chapter{Equacions en derivades parcials}
+\section{Equacions en derivades parcials de primer ordre}
+	\subsection{Equació general de primer ordre}
+	\begin{definition}[Equació en derivades parcials de primer ordre]
+		Siguin \(\Omega\subseteq\mathbb{R}^{2n+1}\) un obert i \(F\colon\Omega\longrightarrow\mathbb{R}\) una funció. Aleshores, denotant
+		\[u_{i}(x)=\frac{\partial u(x)}{\partial x_{i}},\]
+		direm que l'expressió
+		\[F(x_{1},\dots,x_{n},u(x),u_{1}(x),\dots,u_{n}(x))\]
+		és una equació en derivades parcials de primer ordre.
+	\end{definition}
+	\subsection{Equacions quasi-lineals de primer ordre}
+	\begin{definition}[Equació quasi-lineal]
+		\labelname{equació diferencial quasi-lineal}\label{def:equació diferencial quasi lineal}
+		Siguin \(\Omega\subseteq\mathbb{R}^{n}\times\mathbb{R}\) un obert, \(\{P_{i}\}_{i=1}^{N}\) una família de funcions de \(\Omega\) a \(\mathbb{R}\) i \(R\colon\Omega\longrightarrow\mathbb{R}\) una funció. Aleshores direm que l'expressió
+		\[\sum_{i=1}^{N}P_{i}(x,u(x))\frac{\partial u(x)}{\partial x_{i}}=R(x,u(x))\]
+		és una equació diferencial quasi-lineal de primer ordre.
+	\end{definition}
+	\begin{example}
+		Exemples d'equacions quasi-lineals són, amb \(K>0\), l'equació de la calor
+		\[\frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial u}{\partial t}\]
+		o l'equació de la corda vibrant
+		\[\frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial^{2} u}{\partial t^{2}},\]
+		mentre que exemples d'equacions en derivades parcials que no siguin quasi-lineals són l'equació no lineal de la calor
+		\[\frac{\partial^{2} u}{\partial x^{2}}+f(u)=K\frac{\partial u}{\partial t}\]
+		o
+		\[otra más\]
+	\end{example}
+	
 \end{document} 
